--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </nav>
 
     <!-- Hero / Home Banner -->
-    <section id="home" class="container-xl pb-5 mb-0">
+    <section id="home" class="container-xl pb-4">
         <div class="hero-glass mt-5" data-aos="fade-up">
             <div class="row align-items-center w-100 m-0">
                 <div class="col-lg-5 py-4 px-0">
@@ -122,8 +122,8 @@
     </section>
 
     <!-- Home Vision Banner -->
-    <div class="container-xl mt-0" data-aos="fade-up">
-        <div class="glass-panel text-center mt-0">
+    <div class="container-xl my-4" data-aos="fade-up">
+        <div class="glass-panel text-center">
             <h3 class="fw-normal lh-base mb-0">
                 <span class="text-primary fw-bold">Naší vizí je vás</span>, naše klienty, <span
                     class="text-primary fw-bold">naučit</span> správně a efektivně <span
@@ -133,7 +133,7 @@
     </div>
 
     <!-- About Section -->
-    <section id="about" class="container-xl py-5 mt-1 mb-0">
+    <section id="about" class="container-xl py-4">
         <div class="glass-panel">
             <div class="row align-items-center g-5">
                 <div class="col-lg-5 order-lg-2 mb-4 mb-lg-0 text-lg-end" data-aos="fade-left">
@@ -164,36 +164,8 @@
         </div>
     </section>
 
-    <!-- Cooperation Logos -->
-    <div class="container-xl py-4" id="cooperation" data-aos="fade-up">
-        <div class="glass-panel">
-            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-5 align-items-center text-center p-4">
-                <div><a href="https://www.kpsostrava.cz"><img src="static/images/cooperation/kpsos.webp" title="KPSOS"
-                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
-                            style="max-width:160px;max-height:80px;" alt="KPSOS logo" /></a></div>
-                <div><a href="https://www.vsc.cz"><img src="static/images/cooperation/victoria.webp" title="Victoria"
-                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
-                            style="max-width:160px;max-height:80px;" alt="Victoria logo" /></a></div>
-                <div><a href="https://www.sportgym-ostrava.cz"><img
-                            src="static/images/cooperation/sportgym_ostrava.webp" title="Sportgym Ostrava"
-                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
-                            style="max-width:130px;max-height:70px;" alt="Sportgym Ostrava logo" /></a></div>
-                <div><a href="https://www.czechswimming.cz"><img src="static/images/cooperation/csps.webp" title="ČSPS"
-                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
-                            style="max-width:160px;max-height:80px;" alt="ČSPS logo" /></a></div>
-                <div><a href="https://www.scpap.cz"><img src="static/images/cooperation/scpap.webp" title="SCPAP"
-                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
-                            style="max-width:160px;max-height:80px;" alt="SCPAP logo" /></a></div>
-                <div><a href="https://www.fyzioterapeut-ostrava.cz"><img
-                            src="static/images/cooperation/fyz_ostrava.webp" title="Fyzioterapeut Ostrava"
-                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
-                            style="max-width:160px;max-height:80px;" alt="Fyzioterapeut Ostrava logo" /></a></div>
-            </div>
-        </div>
-    </div>
-
     <!-- Services Section Modernized -->
-    <section id="services" class="container-xl py-5">
+    <section id="services" class="container-xl py-4">
         <h2 class="display-5 mb-4 fw-bold text-center brand-gradient">Služby</h2>
         <div class="col-xxl-10 mx-auto" data-aos="fade-up">
             <p class="lead mb-5 text-center text-muted" style="max-width: 900px; margin: 0 auto;">
@@ -274,34 +246,36 @@
         </div>
     </section>
 
-    <!-- Career Section -->
-    <section id="career" class="container-xl">
+    <!-- Cooperation Logos -->
+    <div class="container-xl py-4" id="cooperation" data-aos="fade-up">
         <div class="glass-panel">
-            <div class="row align-items-center g-5 py-3">
-                <div class="col-lg-5 mb-4 mb-lg-0 text-lg-start" data-aos="fade-right">
-                    <img src="static/images/main/career.webp" class="img-fluid shadow-lg glass-card"
-                        alt="Trenéři Element Swimming">
-                </div>
-                <div class="col-lg-7" data-aos="fade-left">
-                    <h2 class="display-5 fw-bold mb-3">Kariéra</h2>
-                    <p class="lead mb-4 text-muted" style="text-align:justify;">
-                        Staňte se součástí profesionálního týmu! Spolupracujte s různorodou klientelou a přizpůsobte
-                        tréninky na míru. Společně dosáhneme úspěchů a pomůžeme lidem plavat rychleji, lépe a
-                        jistěji.<br><br>
-                        Kontaktujte nás a povězte, proč byste měli být naším dalším skvělým trenérem.
-                    </p>
-                    <a href="#contact">
-                        <button type="button" class="btn-modern d-inline-flex align-items-center gap-2">
-                            Více informací
-                        </button>
-                    </a>
-                </div>
+            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-5 align-items-center text-center p-4">
+                <div><a href="https://www.kpsostrava.cz"><img src="static/images/cooperation/kpsos.webp" title="KPSOS"
+                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
+                            style="max-width:160px;max-height:80px;" alt="KPSOS logo" /></a></div>
+                <div><a href="https://www.vsc.cz"><img src="static/images/cooperation/victoria.webp" title="Victoria"
+                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
+                            style="max-width:160px;max-height:80px;" alt="Victoria logo" /></a></div>
+                <div><a href="https://www.sportgym-ostrava.cz"><img
+                            src="static/images/cooperation/sportgym_ostrava.webp" title="Sportgym Ostrava"
+                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
+                            style="max-width:130px;max-height:70px;" alt="Sportgym Ostrava logo" /></a></div>
+                <div><a href="https://www.czechswimming.cz"><img src="static/images/cooperation/csps.webp" title="ČSPS"
+                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
+                            style="max-width:160px;max-height:80px;" alt="ČSPS logo" /></a></div>
+                <div><a href="https://www.scpap.cz"><img src="static/images/cooperation/scpap.webp" title="SCPAP"
+                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
+                            style="max-width:160px;max-height:80px;" alt="SCPAP logo" /></a></div>
+                <div><a href="https://www.fyzioterapeut-ostrava.cz"><img
+                            src="static/images/cooperation/fyz_ostrava.webp" title="Fyzioterapeut Ostrava"
+                            class="img-fluid opacity-75 hover-opacity-100 transition-opacity"
+                            style="max-width:160px;max-height:80px;" alt="Fyzioterapeut Ostrava logo" /></a></div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- WhyUs / Features Section -->
-    <section class="container-xl py-5">
+    <section class="container-xl py-4">
         <h2 class="display-6 mb-5 fw-bold text-center brand-gradient">Proč zvolit právě nás?</h2>
         <div class="row g-4 pt-3 row-cols-1 row-cols-md-3 text-center">
             <div class="col mx-0" data-aos="fade-up" data-aos-delay="0">
@@ -338,7 +312,7 @@
     </section>
 
     <!-- References Carousel modern look -->
-    <section class="container-xl py-5" data-aos="fade-up">
+    <section class="container-xl py-4" data-aos="fade-up">
         <div class="carousel-testimonial">
             <h2 class="display-5 pt-3 pb-0 fw-bold text-center brand-gradient">Jak to vidí naši klienti?</h2>
             <div id="myCarousel" class="carousel slide py-5">
@@ -452,8 +426,34 @@
         </div>
     </section>
 
+    <!-- Career Section -->
+    <section id="career" class="container-xl py-4">
+        <div class="glass-panel">
+            <div class="row align-items-center g-5 py-3">
+                <div class="col-lg-7" data-aos="fade-right">
+                    <h2 class="display-5 fw-bold mb-3">Kariéra</h2>
+                    <p class="lead mb-4 text-muted" style="text-align:justify;">
+                        Staňte se součástí profesionálního týmu! Spolupracujte s různorodou klientelou a přizpůsobte
+                        tréninky na míru. Společně dosáhneme úspěchů a pomůžeme lidem plavat rychleji, lépe a
+                        jistěji.<br><br>
+                        Kontaktujte nás a povězte, proč byste měli být naším dalším skvělým trenérem.
+                    </p>
+                    <a href="#contact">
+                        <button type="button" class="btn-modern d-inline-flex align-items-center gap-2">
+                            Více informací
+                        </button>
+                    </a>
+                </div>
+                <div class="col-lg-5 mb-4 mb-lg-0 text-lg-start" data-aos="fade-left">
+                    <img src="static/images/main/career.webp" class="img-fluid shadow-lg glass-card"
+                        alt="Trenéři Element Swimming">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section Updated -->
-    <section id="contact" class="container-xl py-5">
+    <section id="contact" class="container-xl py-4">
         <div class="glass-panel">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0 text-lg-end" data-aos="fade-right">
@@ -466,11 +466,11 @@
                         Chcete si naplánovat trénink? Máte otázky, potřebujete spojení na trenéra, nebo něco jiného?
                         Stačí se nám ozvat.
                     </p>
-                    <div>
+                    <div class="contact-links-container">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfExbsQzZFEEH5-PBYWJnsd8lAc4KQTP9j4OR8wL90DF2WM_g/viewform"
-                            target="_blank" class="d-flex align-items-center text-body contact-item">
-                            <i class="bi bi-file-text fs-3 text-primary"></i>
-                            <span class="ms-3" style="font-size:1.11rem;">Nezávazná poptávka</span>
+                            target="_blank" class="d-flex align-items-center contact-item-highlight">
+                            <i class="bi bi-file-text fs-3"></i>
+                            <span class="ms-3 fw-bold" style="font-size:1.11rem;">Nezávazná poptávka</span>
                         </a>
                         <a href="mailto:elementswimming@gmail.com"
                             class="d-flex align-items-center text-body contact-item">
@@ -507,7 +507,7 @@
         <div class="container-xl">
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
                 <div class="mb-3 mb-md-0 small text-muted">
-                    &copy; 2025 Element Swimming &mdash; by
+                    &copy; 2026 Element Swimming &mdash;
                     <a class="text-muted text-decoration-none"
                         href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
                 </div>
@@ -541,13 +541,13 @@
                                     <td class="service-name">Individuální lekce</td>
                                     <td class="w-50 text-secondary">Trénink jeden on one s trenérem, detailní rozbor,
                                         okamžitý feedback.</td>
-                                    <td class="text-end"><span class="price-tag">999&nbsp;Kč/hod</span></td>
+                                    <td class="text-end"><span class="price-tag">od 999&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lekce pro dvojice</td>
                                     <td class="text-secondary">Trénink s trenérem pro dva plavce, navzájem se motivujete
                                         i šetříte.</td>
-                                    <td class="text-end"><span class="price-tag">1199&nbsp;Kč/hod</span></td>
+                                    <td class="text-end"><span class="price-tag">od 1199&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Skupinové lekce</td>
@@ -558,7 +558,7 @@
                                     <td class="service-name">Lekce pro (ne)plavce</td>
                                     <td class="text-secondary">Speciální individuální lekce pro úplné začátečníky, děti
                                         nebo nesmělé plavce.</td>
-                                    <td class="text-end"><span class="price-tag">1199&nbsp;Kč/hod</span></td>
+                                    <td class="text-end"><span class="price-tag">od 1199&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Rozbor techniky</td>
@@ -569,7 +569,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <small class="text-secondary">Ceník platný od 2.5.2025.
+                    <small class="text-secondary">Ceník platný od 1.1.2026.
                         <br>
                         <ul class="mt-2 px-4 small">
                             <li>Objednanou lekci lze zrušit nejpozději do 24 hodin předem.</li>
@@ -622,7 +622,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <small class="text-secondary">Ceník platný od 2.5.2025.
+                    <small class="text-secondary">Ceník platný od 1.1.2026.
                         <br>
                         <ul class="mt-2 px-4 small">
                             <li>Objednanou lekci lze zrušit nejpozději do 24 hodin předem.</li>
@@ -674,7 +674,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <small class="text-secondary">Ceník platný od 2.5.2025.
+                    <small class="text-secondary">Ceník platný od 1.1.2026.
                         <br>
                         <ul class="mt-2 px-4 small">
                             <li>Objednanou lekci lze zrušit nejpozději do 24 hodin předem.</li>
@@ -726,7 +726,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <small class="text-secondary">Ceník platný od 2.5.2025.
+                    <small class="text-secondary">Ceník platný od 1.1.2026.
                         <br>
                         <ul class="mt-2 px-4 small">
                             <li>Objednanou lekci lze zrušit nejpozději do 24 hodin předem.</li>
@@ -760,7 +760,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <small class="text-secondary">Ceník platný od 2.5.2025.
+                    <small class="text-secondary">Ceník platný od 1.1.2026.
                         <br>
                         <ul class="mt-2 px-4 small">
                             <li>Objednanou konzultaci lze zrušit nejpozději do 24 hodin předem.</li>
