Minor fixes, english version

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <div class="glass-panel text-center">
             <h3 class="fw-normal lh-base mb-0">
                 <span class="text-primary fw-bold">Naší vizí je vás</span>, naše klienty, <span
-                    class="text-primary fw-bold">naučit</span> správně a efektivně <span
-                    class="text-primary fw-bold">plavat</span>.
+                    class="text-primary fw-bold">naučit</span> správně a <span class="text-primary fw-bold">efektivně
+                    plavat</span>.
             </h3>
         </div>
     </div>
@@ -164,16 +164,55 @@
         </div>
     </section>
 
+    <!-- WhyUs / Features Section -->
+    <section class="container-xl py-4">
+        <h2 class="display-6 mb-5 fw-bold text-center brand-gradient">Proč zvolit právě nás?</h2>
+        <div class="row g-4 pt-3 row-cols-1 row-cols-md-3 text-center">
+            <div class="col mx-0" data-aos="fade-up" data-aos-delay="0">
+                <div class="feature-box">
+                    <div class="feature-icon-wrapper">
+                        <i class="bi bi-cpu h2 m-0"></i>
+                    </div>
+                    <h3 class="h5 fw-bold py-2">Moderní přístup</h3>
+                    <p class="mb-0 text-muted">Sportovní trénink v oblasti plavání podle nejnovějších poznatků,
+                        podpořený mnohaletou praxí.</p>
+                </div>
+            </div>
+            <div class="col mx-0" data-aos="fade-up" data-aos-delay="100">
+                <div class="feature-box">
+                    <div class="feature-icon-wrapper">
+                        <i class="bi bi-bar-chart-line h2 m-0"></i>
+                    </div>
+                    <h3 class="h5 fw-bold py-2">Udržitelné výsledky</h3>
+                    <p class="mb-0 text-muted">Respektujeme vaši individualitu, nastavujeme nejvhodnější typ tréninku
+                        pro dlouhodobě udržitelné výsledky.</p>
+                </div>
+            </div>
+            <div class="col mx-0" data-aos="fade-up" data-aos-delay="200">
+                <div class="feature-box">
+                    <div class="feature-icon-wrapper">
+                        <i class="bi bi-globe2 h2 m-0"></i>
+                    </div>
+                    <h3 class="h5 fw-bold py-2">Flexibilita a dostupnost</h3>
+                    <p class="mb-0 text-muted">Působíme v několika městech ČR, proto snadno vyhovíme individuálním
+                        požadavkům.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Services Section Modernized -->
     <section id="services" class="container-xl py-4">
         <h2 class="display-5 mb-4 fw-bold text-center brand-gradient">Služby</h2>
         <div class="col-xxl-10 mx-auto" data-aos="fade-up">
             <p class="lead mb-5 text-center text-muted" style="max-width: 900px; margin: 0 auto;">
                 V <span class="fw-bold text-primary">Element Swimming</span> věříme v individuální přístup a
-                spolupracujeme pouze s certifikovanými trenéry ČSPS.<br>
-                Nabízíme plavecké služby na míru v <span class="fw-bold">Praze, Brně, Ostravě, Olomouci, Mladé
-                    Boleslavi</span> i <span class="fw-bold">Online</span>.<br>
-                Pro detaily a ceny, klikněte na Vaše město.
+                spolupracujeme pouze s certifikovanými trenéry ČSPS.
+                <br>
+                Nabízíme individuální plavecké služby na míru v <span class="fw-bold">Praze, Brně, Ostravě, Olomouci, Mladé
+                Boleslavi</span> i <span class="fw-bold">Online</span>.
+                <br>
+                <span class="fw-bold">Pro více informací a ceny vyberte své město níže.</span>
             </p>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
@@ -222,7 +261,7 @@
                 </button>
             </div>
             <div class="col" data-aos="flip-left" data-aos-delay="400">
-                <button id="mlada_boleslav" class="service-card-btn" data-bs-toggle="modal" data-bs-target="#BrnoModal"
+                <button id="mlada_boleslav" class="service-card-btn" data-bs-toggle="modal" data-bs-target="#MladaBoleslavModal"
                     aria-label="Mladá Boleslav">
                     <div class="service-card"
                         style="background: url('static/images/services/mlada_boleslav.webp') center/cover no-repeat;">
@@ -273,43 +312,6 @@
             </div>
         </div>
     </div>
-
-    <!-- WhyUs / Features Section -->
-    <section class="container-xl py-4">
-        <h2 class="display-6 mb-5 fw-bold text-center brand-gradient">Proč zvolit právě nás?</h2>
-        <div class="row g-4 pt-3 row-cols-1 row-cols-md-3 text-center">
-            <div class="col mx-0" data-aos="fade-up" data-aos-delay="0">
-                <div class="feature-box">
-                    <div class="feature-icon-wrapper">
-                        <i class="bi bi-cpu h2 m-0"></i>
-                    </div>
-                    <h3 class="h5 fw-bold py-2">Moderní přístup</h3>
-                    <p class="mb-0 text-muted">Sportovní trénink v oblasti plavání podle nejnovějších poznatků,
-                        podpořený mnohaletou praxí.</p>
-                </div>
-            </div>
-            <div class="col mx-0" data-aos="fade-up" data-aos-delay="100">
-                <div class="feature-box">
-                    <div class="feature-icon-wrapper">
-                        <i class="bi bi-bar-chart-line h2 m-0"></i>
-                    </div>
-                    <h3 class="h5 fw-bold py-2">Udržitelné výsledky</h3>
-                    <p class="mb-0 text-muted">Respektujeme vaši individualitu, nastavujeme nejvhodnější typ tréninku
-                        pro dlouhodobě udržitelné výsledky.</p>
-                </div>
-            </div>
-            <div class="col mx-0" data-aos="fade-up" data-aos-delay="200">
-                <div class="feature-box">
-                    <div class="feature-icon-wrapper">
-                        <i class="bi bi-globe2 h2 m-0"></i>
-                    </div>
-                    <h3 class="h5 fw-bold py-2">Flexibilita a dostupnost</h3>
-                    <p class="mb-0 text-muted">Působíme v několika městech ČR, proto snadno vyhovíme individuálním
-                        požadavkům.</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- References Carousel modern look -->
     <section class="container-xl py-4" data-aos="fade-up">
@@ -525,7 +527,7 @@
         </div>
     </footer>
 
-    <!-- PRAGUE MODAL updated pricing (csv UX) -->
+    <!-- PRAGUE MODAL -->
     <div class="modal fade" id="PragueModal" tabindex="-1" aria-labelledby="PragueModal" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
@@ -539,8 +541,7 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individuální lekce</td>
-                                    <td class="w-50 text-secondary">Trénink jeden on one s trenérem, detailní rozbor,
-                                        okamžitý feedback.</td>
+                                    <td class="w-50 text-secondary">Individuální trénink s trenérem, detailní analýza a okamžitá zpětná vazba.</td>
                                     <td class="text-end"><span class="price-tag">od 999&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
@@ -581,7 +582,7 @@
             </div>
         </div>
     </div>
-    <!-- BRNO MODAL updated pricing -->
+    <!-- BRNO MODAL -->
     <div class="modal fade" id="BrnoModal" tabindex="-1" aria-labelledby="BrnoModal" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
@@ -595,7 +596,7 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individuální lekce</td>
-                                    <td class="text-secondary">One-on-one s trenérem na bazénu v Brně.</td>
+                                    <td class="text-secondary">Individuální trénink s trenérem, detailní analýza a okamžitá zpětná vazba.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
@@ -634,7 +635,7 @@
             </div>
         </div>
     </div>
-    <!-- OSTRAVA MODAL updated pricing -->
+    <!-- OSTRAVA MODAL -->
     <div class="modal fade" id="OstravaModal" tabindex="-1" aria-labelledby="OstravaModal" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
@@ -648,7 +649,7 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individuální lekce</td>
-                                    <td class="text-secondary">Osobní trénink s trenérem na bazénu v Ostravě.</td>
+                                    <td class="text-secondary">Individuální trénink s trenérem, detailní analýza a okamžitá zpětná vazba.</td>
                                     <td class="text-end"><span class="price-tag">749&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
@@ -686,7 +687,7 @@
             </div>
         </div>
     </div>
-    <!-- OLOMOUC MODAL updated pricing -->
+    <!-- OLOMOUC MODAL -->
     <div class="modal fade" id="OlomoucModal" tabindex="-1" aria-labelledby="OlomoucModal" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
@@ -700,7 +701,7 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individuální lekce</td>
-                                    <td class="text-secondary">Osobní trénink s trenérem na bazénu v Olomouci.</td>
+                                    <td class="text-secondary">Individuální trénink s trenérem, detailní analýza a okamžitá zpětná vazba.</td>
                                     <td class="text-end"><span class="price-tag">649&nbsp;Kč/hod</span></td>
                                 </tr>
                                 <tr>
@@ -738,7 +739,60 @@
             </div>
         </div>
     </div>
-    <!-- ONLINE MODAL updated pricing -->
+    <!-- MLADA BOLESLAV MODAL -->
+    <div class="modal fade" id="MladaBoleslavModal" tabindex="-1" aria-labelledby="MladaBoleslavModal" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content px-2">
+                <div class="modal-header border-0">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zavřít"></button>
+                </div>
+                <div class="modal-body">
+                    <h2 class="modal-title-custom text-center">Ceník - Mladá Boleslav</h2>
+                    <div class="table-responsive">
+                        <table class="table align-middle table-hover table-borderless">
+                            <tbody>
+                                <tr>
+                                    <td class="service-name">Individuální lekce</td>
+                                    <td class="text-secondary">Individuální trénink s trenérem, detailní analýza a okamžitá zpětná vazba.</td>
+                                    <td class="text-end"><span class="price-tag">799&nbsp;Kč/hod</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="service-name">Lekce pro dvojice</td>
+                                    <td class="text-secondary">Trénink 2 osob se sdíleným trenérem.</td>
+                                    <td class="text-end"><span class="price-tag">899&nbsp;Kč/hod</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="service-name">Skupinové lekce</td>
+                                    <td class="text-secondary">Skupinový trénink podobných plavců.</td>
+                                    <td class="text-end"><span class="price-tag">od 999&nbsp;Kč/hod</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="service-name">Lekce pro (ne)plavce</td>
+                                    <td class="text-secondary">Speciální individuálka pro úplné začátečníky nebo děti.
+                                    </td>
+                                    <td class="text-end"><span class="price-tag">899&nbsp;Kč/hod</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="service-name">Rozbor techniky</td>
+                                    <td class="text-secondary">Videoanalýza a osobní feedback s trenérem.</td>
+                                    <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <small class="text-secondary">Ceník platný od 1.1.2026.
+                        <br>
+                        <ul class="mt-2 px-4 small">
+                            <li>Objednanou lekci lze zrušit nejpozději do 24 hodin předem.</li>
+                            <li>Při zrušení lekce v den konání se účtuje plná cena.</li>
+                            <li>Pokud dojde ke zrušení z naší strany, následující lekce zdarma.</li>
+                        </ul>
+                    </small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ONLINE MODAL -->
     <div class="modal fade" id="OnlineModal" tabindex="-1" aria-labelledby="OnlineModal" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
@@ -814,4 +868,14 @@
         }
     </script>
 </body>
-<!-- Credits (unchanged) -->
+<!-- Credits
+  Service section photos:
+    Prague - Photo by JESHOOTS.com from Pexels
+    Brno - https://pixabay.com/images/id-4902615/
+    Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
+    Online - Photo by Pixabay from Pexels
+    Mladá Boleslav - By Michaela zemlickova - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=114845115
+
+  Contact icons:
+    https://fontawesome.com/
+  -->
