Lang change effect

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a href="index_en.html" class="nav-link px-2 p-0" title="English language">
                             <span class="lang-switch">
                                 <i class="bi bi-translate me-1"></i>
-                                <span class="lang-cz">CZ</span>/<span class="lang-en">EN</span>
+                                <span class="lang-current">CZ</span>/<span class="lang-target">EN</span>
                             </span>
                         </a>
                     </li>
