--- a/index_en.html
+++ b/index_en.html
@@ -83,7 +83,7 @@
                         <a href="index.html" class="nav-link px-2 p-0" title="Czech language">
                             <span class="lang-switch">
                                 <i class="bi bi-translate me-1"></i>
-                                <span class="lang-en">EN</span>/<span class="lang-cz">CZ</span>
+                                <span class="lang-current">EN</span>/<span class="lang-target">CZ</span>
                             </span>
                         </a>
                     </li>
