--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <div class="glass-panel">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0 text-lg-end" data-aos="fade-right">
-                    <img src="static/images/main/logo_big.png" class="img-fluid rounded-4"
+                    <img src="static/images/main/contact_logo.webp" class="img-fluid rounded-4"
                         alt="Logo Element Swimming velké" style="max-width:460px;">
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
