--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="preload" href="static/css/general.css" as="style" />
-    <link rel="preload" href="static/css/headers.css" as="style" />
-    <link rel="preload" href="static/css/heroes.css" as="style" />
     <link rel="preload" href="static/css/features.css" as="style" />
     <link href="static/css/general.css" rel="stylesheet" />
-    <link href="static/css/headers.css" rel="stylesheet" />
-    <link href="static/css/heroes.css" rel="stylesheet" />
     <link href="static/css/features.css" rel="stylesheet" />
     <link href="static/css/modern.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -62,7 +58,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom smart-scroll">
         <div class="container-xl py-2">
             <a class="navbar-brand d-flex align-items-center gap-2" href="/">
-                <img src="static/images/main/logo_small.png" alt="Element Swimming Logo" width="42"
+                <img src="static/images/main/logo_small.png" alt="Element Swimming Logo"
                     height="36">
                 <div class="d-flex align-items-center lh-1">
                     <span class="brand-element">Element</span>
@@ -317,7 +313,7 @@
     <section class="container-xl py-4" data-aos="fade-up">
         <div class="carousel-testimonial">
             <h2 class="display-5 pt-3 pb-0 fw-bold text-center brand-gradient">Jak to vidí naši klienti?</h2>
-            <div id="myCarousel" class="carousel slide py-5">
+            <div id="myCarousel" class="carousel slide py-5" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-label="Slide 1"
                         class="active"></button>
@@ -514,7 +510,7 @@
                         href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
                 </div>
                 <a href="/" class="mb-3 mb-md-0">
-                    <img src="static/images/main/logo_small.png" alt="Element Swimming Logo" width="42"
+                    <img src="static/images/main/logo_small.png" alt="Element Swimming Logo"
                         height="36">
                 </a>
                 <ul class="nav justify-content-end">
@@ -875,7 +871,4 @@
     Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
     Online - Photo by Pixabay from Pexels
     Mladá Boleslav - By Michaela zemlickova - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=114845115
-
-  Contact icons:
-    https://fontawesome.com/
   -->
